--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="React Snapchat App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <title>React Snapchat App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +36,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      "serviceWorker" in navigator
+        ? window.addEventListener("load", function () {
+            navigator.serviceWorker
+              .register("worker.js")
+              .then(
+                function (o) {
+                  console.log("Worker registration successful", o.scope);
+                },
+                function (o) {
+                  console.log("Worker registration failed", o);
+                }
+              )
+              .catch(function (o) {
+                console.log(o);
+              });
+          })
+        : console.log("Service Worker is not supported by browser.");
+    </script>
   </body>
 </html>
